# storyVA

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  GUIDELINES.md  PRD.md  README.md  TDD.md
.cursor/rules/: update.mdc
backend/: .env.example  README.md  main.py  pyproject.toml
backend/agent/: lelouch.py  state.py  tools.py  voice_pipeline.py
backend/data/: emotion_control.md
backend/rag/: __init__.py  indexer.py  retriever.py
backend/scripts/: debug_pinecone.py  index_pdfs.py  setup_pinecone.py  test_fish_audio.py  test_phase4_tools.py  test_rag_retrieval.py
backend/tools/: diff_generator.py  emotion_validator.py  fish_audio_preview.py
backend/tts/: fish_audio.py
context/: livekit_custom_tts_node.md  livekit_tts_overview.md
frontend/: app-config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/livekit-token/: route.ts
frontend/components/: DiffViewer.tsx  InlineDiff.tsx  LiveTranscript.tsx  SessionProvider.tsx  StoryEditor.tsx  ViewController.tsx  WelcomeView.tsx
frontend/hooks/: useRoom.ts
